--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,12 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
