--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,14 @@
 			<artifactId>quartz</artifactId>
 			<version>2.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
